<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alarmlist_fragment"
    tools:context=".activities.RingActivity">

    <TextView
        android:id="@+id/operand2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/operand1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintBottom_toTopOf="@+id/resultTextNumber"
        app:layout_constraintStart_toEndOf="@+id/operator" />

    <Button
        android:id="@+id/alarm_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/alarmlist_fragment"
        android:enabled="false"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/stop"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextNumber" />

    <TextView
        android:id="@+id/operand1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/operand2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/resultTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/operator" />

    <TextView
        android:id="@+id/operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/operator"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintBottom_toTopOf="@+id/resultTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/resultTextNumber"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/answer"
        android:background="@drawable/alarmlist_fragment"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="25dp"
        android:inputType="number"
        android:maxLength="5"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/dateOn"
        android:textSize="50dp"
        android:textStyle="bold"
        android:background="@drawable/alarmlist_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/timeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"/>

    <ImageView
        android:id="@+id/clockImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTextView"
        app:srcCompat="@drawable/ic_alarm_white_24dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>